# zoomy-amrex

./: .gitignore  README.md  build.py  deliverable.py  pyproject.toml  setup.sh
Exec/: GNUmakefile  inputs
Source/: Make.package  Model.H  Numerics.H  NumericsUser.H  UserFunctions.H  ZoomyAmr.H  ZoomyAmr.cpp  ZoomyEig.H  chorin_amr.cpp  chorin_common.H  chorin_main.cpp  constants.H  imex_solver.H  init_solution.cpp  main.cpp  make_rhs.H  write_plotfiles.cpp
tests/: .gitignore  cases.py  conftest.py  models.py  refs.py  test_parallel_two_ranks.py  test_parity_numpy.py  test_swe_2d.py  test_swe_ritter_dry.py  test_swe_stoker_wet.py  test_userfunctions.cpp  test_wb_lake_at_rest.py
tests/refs/: parallel_2rank.npz  parity_numpy_n100.npz  parity_numpy_n200.npz  ritter_dry.npz  stoker_wet.npz  swe_2d.npz  timings.json  wb_lake.npz
zoomy_amrex/: __init__.py  _constants.py  malpasset.py  preprocess_rasterdata.py  run_case.py  solvers.py
zoomy_amrex/transformation/: __init__.py  to_amrex.py
